bug vertical track scrollbar size

--- a/vtl-editor/src/editor/components/editor.scss
+++ b/vtl-editor/src/editor/components/editor.scss
@@ -72,6 +72,7 @@ $scrollbarMargin: 12px;
       height: 100%;
       cursor: text;
 
+      overflow-y: hidden;
       overflow-x: hidden;
     }
 
